--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -3,19 +3,62 @@
 .info {
     min-height: 45vh;
     height: auto;
-    background-color: black;
     position: relative;
     display: flex;
     align-items: end;
     .infoBox {
-        height: 30vh;
+        height: 35vh;
         background: var(--primary);
         display: flex;
         width: 100%;
+        justify-content: center;
+        flex-direction: column;
+        .infoContent {
+            width: auto;
+            max-width: 30vw;
+            margin-left: 100px;
+            h3 {
+                font-size: 2vw;
+                color: var(--white);
+                font-weight: 500;
+                width: auto;
+                margin: 10px 0;
+            }
+            p {
+                margin: 10px 0;
+                font-size: 0.98vw;
+                color: var(--white);
+                font-weight: 400;
+            }
+            button {
+                width: 10vw;
+                height: 7vh;
+                background: var(--secondary);
+                border: none;
+                border-radius: 5px;
+                color: var(--white);
+                font-size: 0.95vw;
+                font-weight: 500;
+                cursor: pointer;
+                margin: 10px 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                &:hover {
+                    background: rgb(46, 46, 46);
+                }
+                span {
+                    font-size: 1.2vw;
+                    margin-left: 15px;
+                    margin-top: 2.5px;
+                    height: auto;
+                }
+            }
+        }
     }
     img {
         position: absolute;
-        width: 700px;
+        width: 35vw;
         right: 0;
         top: -20px;
     }
