--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,6 +6,7 @@
     width: 100%;
     padding: 20px 50px;
     height: 10vh;
+    z-index: 9999;
     .left {
         flex: 1;
         img {
@@ -25,6 +26,13 @@
             li {
                 list-style: none;
                 margin: 10px;
+                a {
+                    color: inherit;
+                    text-decoration: none;
+                    &:hover {
+                        color: var(--primary);
+                    }
+                }
             }
         }
     }
