--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 $primary: #F26600;
-$secondary: #2C2C2C;
+$secondary: #252525;
 $white: #FFFFFF;
 $gray: #EEF5F9;
 
@@ -18,6 +18,11 @@ $gray: #EEF5F9;
   padding: 0;
   box-sizing: border-box;
   font-family: Poppins;
-  border: 1px solid red;
+  // border: 1px solid red;
 
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
