--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    position: relative;
 
     h1 {
         font-size: 4vw;
@@ -28,6 +29,13 @@
         width: 100%;
         max-width: 50vw;
         margin: 20px 0;
+    }
+
+    .scrollMouse {
+        position: absolute;
+        width: 50px;
+        bottom: 40px;
+        right: 40px;
     }
 
     form {
