--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,8 @@ $gray: #EEF5F9;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Poppins;
+  font-family: Poppins, "Arial";
+  scroll-behavior: smooth;
   // border: 1px solid red;
 
 }
