--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -7,28 +7,40 @@
     padding: 20px 50px;
     height: 10vh;
     z-index: 9999;
+
     .left {
         flex: 1;
-        img {
-            width: auto;
-            height: 50px;
-            margin-right: 10px;
+
+        a {
+            height: 100%;
+
+            img {
+                width: auto;
+                height: 100%;
+                height: 50px;
+                margin-right: 10px;
+            }
         }
     }
+
     .menu {
         display: flex;
         flex: 2;
+
         ul {
             display: flex;
             height: 100%;
             width: 100%;
             justify-content: center;
+
             li {
                 list-style: none;
                 margin: 10px;
+
                 a {
                     color: inherit;
                     text-decoration: none;
+
                     &:hover {
                         color: var(--primary);
                     }
@@ -36,11 +48,202 @@
             }
         }
     }
+
     .right {
         display: flex;
         flex: 1;
         justify-content: flex-end;
 
-        
+        .selectDiv {
+            border-radius: 5px;
+            min-width: 90px;
+            position: relative;
+
+            select {
+                width: 100%;
+                border-radius: 5px;
+                min-width: 90px;
+                padding-left: 40px !important;
+                border-radius: 5px;
+                cursor: pointer;
+                border: none;
+                outline: none;
+                padding: 10px;
+                background: transparent;
+                position: relative;
+                z-index: 2;
+
+                &::-ms-expand {
+                    display: none;
+                }
+
+                option {
+                    color: var(--secondary);
+                    padding-right: 50px;
+                }
+            }
+
+            img {
+                position: absolute;
+                top: 9px;
+                left: 10px;
+            }
+        }
+    }
+
+    .navBTN {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        width: 100vw;
+        padding: 20px;
+        height: 10vh;
+        z-index: 9999;
+
+        .left {
+            flex: 1;
+
+            img {
+                width: auto;
+                height: 50px;
+                margin-right: 10px;
+            }
+        }
+
+        .menu {
+            display: none;
+            flex: 2;
+
+            ul {
+                display: flex;
+                height: 100%;
+                width: 100%;
+                justify-content: center;
+
+                li {
+                    list-style: none;
+                    margin: 10px;
+
+                    a {
+                        color: inherit;
+                        text-decoration: none;
+
+                        &:hover {
+                            color: var(--primary);
+                        }
+                    }
+                }
+            }
+        }
+
+        .right {
+            display: flex;
+            flex: 1;
+            justify-content: flex-end;
+
+            .selectDiv {
+                border-radius: 5px;
+                min-width: 20px;
+                position: relative;
+                margin: 0 20px;
+
+                select {
+                    min-width: 20px;
+                    padding-left: 40px !important;
+                    padding: 5px;
+                    background: transparent;
+                    position: relative;
+                    z-index: 2;
+
+                    &::-ms-expand {
+                        display: none;
+                    }
+                }
+
+                img {
+                    position: absolute;
+                    top: 4px;
+                    left: 10px;
+                }
+            }
+        }
+
+        .navBTN {
+            display: flex;
+            height: 30px;
+            align-items: center;
+            justify-content: center;
+
+            .burger {
+                position: relative;
+                width: 40px;
+                height: 30px;
+                background: transparent;
+                cursor: pointer;
+                display: block;
+
+                input {
+                    display: none;
+
+                    &:checked~span:nth-of-type(1) {
+                        transform: rotate(45deg);
+                        top: 3px;
+                        left: 6px;
+                    }
+
+                    &:checked~span:nth-of-type(2) {
+                        width: 0%;
+                        opacity: 0;
+                    }
+
+                    &:checked~span:nth-of-type(3) {
+                        transform: rotate(-45deg);
+                        top: 24px;
+                        left: 6px;
+                    }
+                }
+
+                span {
+                    display: block;
+                    position: absolute;
+                    height: 3px;
+                    width: 30px;
+                    border-radius: 9px;
+                    opacity: 1;
+                    left: 0;
+                    transform: rotate(0deg);
+                    transition: .25s ease-in-out;
+
+                    &:nth-of-type(1) {
+                        top: 5px;
+                        transform-origin: left center;
+                    }
+
+                    &:nth-of-type(2) {
+                        top: 45%;
+                        transform: translateY(-45%);
+                        transform-origin: left center;
+                    }
+
+                    &:nth-of-type(3) {
+                        top: 75%;
+                        transform-origin: left center;
+                        transform: translateY(-75%);
+                    }
+                }
+
+            }
+
+
+
+        }
     }
 }
