--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     min-height: 80vh;
+
     .cont {
         display: flex;
         justify-content: center;
@@ -14,19 +15,23 @@
         overflow: hidden;
         position: relative;
         height: 100%;
+
         div {
             margin-left: 100px;
         }
+
         h2 {
             font-size: 48px;
             font-weight: 600;
             margin: 15px 10px;
         }
+
         img {
             width: 100%;
             height: auto;
             margin-left: 40px;
         }
+
         p {
             height: auto;
             max-width: 700px;
@@ -37,6 +42,60 @@
             margin: 10px 10px;
             overflow-y: hidden;
             word-wrap: break-word;
+        }
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .about {
+        min-height: 50vh;
+
+        
+        .cont {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            flex: 1;
+            overflow: hidden;
+            position: relative;
+            height: 100%;
+            
+            div {
+                margin-left: 0px;
+            }
+            
+            h2 {
+                font-size: 24px;
+                font-weight: 600;
+                margin: 15px 30px;
+            }
+            
+            img {
+                width: 100%;
+                height: auto;
+                margin-left: 0px;
+            }
+            
+            p {
+                height: auto;
+                max-width: 700px;
+                width: auto;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 24px;
+                margin: 10px 30px;
+                overflow-y: hidden;
+                word-wrap: break-word;
+            }
+            
+            button {
+                margin: 10px 30px !important;
+                font-size: 14px !important;
+            }
+        }
+        .contTruck {
+            display: none;
         }
     }
 }
