--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -18,7 +18,7 @@
             max-width: 30vw;
             margin-left: 100px;
             h3 {
-                font-size: 2vw;
+                font-size: 1.9vw;
                 color: var(--white);
                 font-weight: 500;
                 width: auto;
@@ -31,7 +31,7 @@
                 font-weight: 400;
             }
             button {
-                width: 10vw;
+                min-width: 10vw;
                 height: 7vh;
                 background: var(--secondary);
                 border: none;
@@ -41,6 +41,7 @@
                 font-weight: 500;
                 cursor: pointer;
                 margin: 10px 0;
+                padding: 15px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -61,5 +62,73 @@
         width: 35vw;
         right: 0;
         top: -20px;
+    }
+}
+
+
+@media screen and (max-width: 768px) { 
+    .info {
+        min-height: 56vh;
+        height: auto;
+        position: relative;
+        display: flex;
+        align-items: end;
+        .infoBox {
+            min-height: 40vh;
+            background: var(--primary);
+            display: flex;
+            width: 100%;
+            justify-content: end;
+            flex-direction: column;
+            .infoContent {
+                width: auto;
+                max-width: 95vw;
+                margin: 20px 0 5px 20px;
+                h3 {
+                    font-size: 20px;
+                    color: var(--white);
+                    font-weight: 500;
+                    width: 100%;
+                    margin: 10px 0;
+                }
+                p {
+                    margin: 10px 0;
+                    font-size: 14px;
+                    color: var(--white);
+                    font-weight: 400;
+                }
+                button {
+                    min-width: 180px;
+                    height: 7vh;
+                    background: var(--secondary);
+                    border: none;
+                    border-radius: 5px;
+                    color: var(--white);
+                    font-size: 14px;
+                    font-weight: 500;
+                    cursor: pointer;
+                    margin: 15px 0;
+                    padding: 15px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    &:hover {
+                        background: rgb(46, 46, 46);
+                    }
+                    span {
+                        font-size: 18px;
+                        margin-left: 15px;
+                        margin-top: 2.5px;
+                        height: auto;
+                    }
+                }
+            }
+        }
+        img {
+            position: absolute;
+            width: 300px;
+            right: 0;
+            top: 30px;
+        }
     }
 }
