--- a/src/components/service/service.scss
+++ b/src/components/service/service.scss
@@ -40,8 +40,47 @@
         font-weight: 500;
         margin: 20px 0;
     }
+    p {
+        font-size: 16px;
+    }
     img {
         width: 80px;
         height: 80px;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .services {
+        h2 {
+            font-size: 24px;
+            margin: 15px 0;
+        }
+        .servicesBox {
+            flex-direction: column;
+            height: 100%;
+            width: 100%;
+            padding: 30px 0;
+        }
+    }
+    .service {
+        width: 90%;
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
+        // height: 250px;
+        margin: 10px 0;
+        justify-content: center;
+        align-items: center;
+        h3 {
+            font-size: 20px;
+            font-weight: 500;
+            margin: 20px 0;
+            width: 90%;
+            text-align: center;
+        }
+        p {
+            width: 90%;
+            text-align: center;
+            font-size: 14px;
+        }
     }
 }
