--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -110,6 +110,7 @@
 
         .left {
             flex: 1;
+            z-index: 999;
 
             img {
                 width: auto;
@@ -119,22 +120,31 @@
         }
 
         .menu {
-            display: none;
-            flex: 2;
+            position: absolute;
+            left: 100%;
+            top: 0;
+            background: var(--white);
+            height: 100vh;
+            width: 100%;
+            z-index: 100;
+            transition: all ease 200ms;
 
             ul {
                 display: flex;
                 height: 100%;
                 width: 100%;
                 justify-content: center;
+                flex-direction: column;
+                align-items: center;
 
                 li {
                     list-style: none;
-                    margin: 10px;
+                    margin: 20px;
 
                     a {
-                        color: inherit;
+                        color: var(--secondary) !important;
                         text-decoration: none;
+                        font-weight: bolder;
 
                         &:hover {
                             color: var(--primary);
@@ -142,6 +152,14 @@
                     }
                 }
             }
+
+            &.active {
+                top: 0;
+                left: 0;
+                transition: all ease 200ms;
+
+            }
+
         }
 
         .right {
@@ -157,7 +175,7 @@
 
                 select {
                     min-width: 20px;
-                    padding-left: 40px !important;
+                    padding-left: 30px !important;
                     padding: 5px;
                     background: transparent;
                     position: relative;
@@ -170,8 +188,9 @@
 
                 img {
                     position: absolute;
-                    top: 4px;
-                    left: 10px;
+                    top: 3.5px;
+                    left: 6px;
+                    width: 25px;
                 }
             }
         }
@@ -181,6 +200,14 @@
             height: 30px;
             align-items: center;
             justify-content: center;
+            z-index: 999;
+
+            .spanX {
+                font-size: 32px;
+                color: var(--secondary) !important;
+                margin-right: 14px;
+                font-weight: bolder;
+            }
 
             .burger {
                 position: relative;
@@ -190,26 +217,26 @@
                 cursor: pointer;
                 display: block;
 
-                input {
-                    display: none;
+                // input {
+                //     display: none;
 
-                    &:checked~span:nth-of-type(1) {
-                        transform: rotate(45deg);
-                        top: 3px;
-                        left: 6px;
-                    }
+                //     &:checked~span:nth-of-type(1) {
+                //         transform: rotate(45deg);
+                //         top: 3px;
+                //         left: 6px;
+                //     }
 
-                    &:checked~span:nth-of-type(2) {
-                        width: 0%;
-                        opacity: 0;
-                    }
+                //     &:checked~span:nth-of-type(2) {
+                //         width: 0%;
+                //         opacity: 0;
+                //     }
 
-                    &:checked~span:nth-of-type(3) {
-                        transform: rotate(-45deg);
-                        top: 24px;
-                        left: 6px;
-                    }
-                }
+                //     &:checked~span:nth-of-type(3) {
+                //         transform: rotate(-45deg);
+                //         top: 24px;
+                //         left: 6px;
+                //     }
+                // }
 
                 span {
                     display: block;
@@ -221,6 +248,7 @@
                     left: 0;
                     transform: rotate(0deg);
                     transition: .25s ease-in-out;
+                    background: inherit;
 
                     &:nth-of-type(1) {
                         top: 5px;
