--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -87,6 +87,7 @@
                 position: absolute;
                 top: 9px;
                 left: 10px;
+                width: 25px;
             }
         }
     }
