--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -1,10 +1,11 @@
 .faqs {
-    min-height: 115vh;
+    min-height: 90vh;
     .faqHeader {
-        height: 20vh;
+        height: auto;
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 156px 0 64px 0;
         h3 {
             font-size: 48px;
             width: 100%;
@@ -21,7 +22,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-
+    padding-bottom: 80px;
     .accordion__section {
         position: relative;
         margin-bottom: 0.5rem;
@@ -32,7 +33,7 @@
         transition: 0.6s ease;
         border-radius: 6px;
         padding: 10px 20px;
-        margin: 24px;
+        margin: 16px;
         &.active {
             background: #FFF6EF;
             transition: 0.6s ease;
@@ -93,16 +94,18 @@
 
 @media screen and (max-width: 768px) {
     .faqs {
-        min-height: 120vh;
+        min-height: 95vh;
         .faqHeader {
-            height: 20vh;
+            height: auto;
             display: flex;
             align-items: center;
             justify-content: center;
+            margin: 63px 0 30px 0;
             h3 {
                 font-size: 24px;
                 width: 100%;
                 text-align: center;
+                // margin-top: 50px;
             }
         }
     }
@@ -115,7 +118,7 @@
         align-items: center;
         justify-content: center;
         height: 100%;
-
+        padding-bottom: 40px;
         .accordion__section {
             position: relative;
             margin-bottom: 0.5rem;
