--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -25,7 +25,8 @@
 
     .menu {
         display: flex;
-        flex: 2;
+        flex: 4;
+        width: 100%;
 
         ul {
             display: flex;
@@ -35,12 +36,16 @@
 
             li {
                 list-style: none;
-                margin: 10px;
-
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 a {
                     color: inherit;
                     text-decoration: none;
-
+                    width: auto;
+                    text-align: center;
+                    font-size: 0.8vw;
                     &:hover {
                         color: var(--primary);
                     }
@@ -146,6 +151,7 @@
                         color: var(--secondary) !important;
                         text-decoration: none;
                         font-weight: bolder;
+                        font-size: 16px;
 
                         &:hover {
                             color: var(--primary);
@@ -176,7 +182,6 @@
 
                 select {
                     min-width: 20px;
-                    padding-left: 30px !important;
                     padding: 5px;
                     background: transparent;
                     position: relative;
