--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -30,7 +30,8 @@
                 margin-left: 15px;
             }
             img {
-                width: 300px;
+                width: 250px;
+                margin-left: 0px
             }
             ul {
                 margin-top: 25px;
@@ -56,7 +57,7 @@
 
 @media screen and (max-width: 768px) {
     .footer {
-        min-height: 50vh;
+        min-height: 80vh;
         background: #111;
         color: var(--white);
         display: flex;
@@ -84,10 +85,11 @@
                 }
                 p {
                     font-size: 16px;
-                    margin-left: 15px;
+                    margin-left: 0px;
                 }
                 img {
-                    width: 300px;
+                    width: 200px;
+                    margin-left: -10px;
                 }
                 ul {
                     margin-top: 25px;
@@ -99,8 +101,9 @@
                             font-size: 16px;
                             font-weight: 500;
                             img {
-                                width: 30px;
+                                width: 20px;
                                 margin-right: 15px;
+                                margin-left: 0;
                             }
                         }
                     }
