--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,7 @@ $gray: #EEF5F9;
   box-sizing: border-box;
   font-family: Poppins, "Arial";
   scroll-behavior: smooth;
-  border: 1px solid red;
+  // border: 1px solid red;
 
 }
 
