--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -1,32 +1,35 @@
 @import url(../../index.scss);
 
 .info {
-    min-height: 45vh;
     height: auto;
     position: relative;
     display: flex;
     align-items: end;
     .infoBox {
-        height: 35vh;
-        background: var(--primary);
+        background: linear-gradient(to top, var(--primary) 0%, var(--primary) 80%, var(--white) 80%, var(--white) 100%);
         display: flex;
         width: 100%;
-        justify-content: center;
-        flex-direction: column;
+        height: 100%;
+        min-height: 60px;
+        justify-content: space-between;
+        align-items: end;
         .infoContent {
+            height: 100%;
             width: auto;
-            max-width: 30vw;
+            max-width: 600px;
             margin-left: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
             h3 {
-                font-size: 1.9vw;
+                font-size: 36px;
                 color: var(--white);
                 font-weight: 500;
                 width: auto;
-                margin: 10px 0;
+                margin-bottom: 12px;
             }
             p {
-                margin: 10px 0;
-                font-size: 0.98vw;
+                font-size: 16px;
                 color: var(--white);
                 font-weight: 400;
             }
@@ -37,14 +40,14 @@
                 border: none;
                 border-radius: 5px;
                 color: var(--white);
-                font-size: 0.95vw;
+                font-size: 18px;
                 font-weight: 500;
                 cursor: pointer;
-                margin: 10px 0;
                 padding: 15px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin: 36px 0;
                 &:hover {
                     background: rgb(46, 46, 46);
                 }
@@ -56,79 +59,38 @@
                 }
             }
         }
-    }
-    img {
-        position: absolute;
-        width: 35vw;
-        right: 0;
-        top: -20px;
+        img {
+            height: 450px;
+            width: 650px;
+        }
     }
 }
 
-
 @media screen and (max-width: 768px) { 
     .info {
-        min-height: 56vh;
-        height: auto;
-        position: relative;
-        display: flex;
-        align-items: end;
         .infoBox {
-            min-height: 40vh;
-            background: var(--primary);
-            display: flex;
-            width: 100%;
-            justify-content: end;
-            flex-direction: column;
+            flex-direction: column-reverse;
+            align-items: center;
             .infoContent {
-                width: auto;
-                max-width: 95vw;
-                margin: 20px 0 5px 20px;
+                margin: 0;
+                padding: 0 20px;
                 h3 {
-                    font-size: 20px;
-                    color: var(--white);
-                    font-weight: 500;
-                    width: 100%;
-                    margin: 10px 0;
+                    font-size: 24px;
                 }
                 p {
-                    margin: 10px 0;
                     font-size: 14px;
-                    color: var(--white);
-                    font-weight: 400;
                 }
                 button {
-                    min-width: 180px;
-                    height: 7vh;
-                    background: var(--secondary);
-                    border: none;
-                    border-radius: 5px;
-                    color: var(--white);
                     font-size: 14px;
-                    font-weight: 500;
-                    cursor: pointer;
-                    margin: 15px 0;
-                    padding: 15px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    &:hover {
-                        background: rgb(46, 46, 46);
-                    }
                     span {
-                        font-size: 18px;
-                        margin-left: 15px;
-                        margin-top: 2.5px;
-                        height: auto;
+                        font-size: 14px;
                     }
                 }
             }
-        }
-        img {
-            position: absolute;
-            width: 300px;
-            right: 0;
-            top: 30px;
+            img {
+                height: 200px;
+                width: 300px;
+            }
         }
     }
 }
