--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -12,7 +12,7 @@
     position: relative;
 
     h1 {
-        font-size: 4vw;
+        font-size: 60px;
         width: 100%;
         max-width: 60vw;
         font-style: normal;
@@ -28,7 +28,7 @@
         text-align: center;
         width: 100%;
         max-width: 50vw;
-        margin: 20px 0;
+        // margin: 20px 0;
     }
 
     .scrollMouse {
@@ -43,7 +43,7 @@
         position: relative;
         align-items: center;
         justify-content: center;
-        margin: 32px 0;
+        margin: 64px 0;
 
         input {
             border: 1px solid var(--primary);
@@ -77,7 +77,7 @@
             cursor: pointer;
             border: none;
             outline: none;
-            
+            height: 100%;
             img {
                 margin: 0 5px;
             }
@@ -101,6 +101,7 @@
         h1 {
             font-size: 6vw;
             max-width: 100%;
+            margin-top: 32px;
         }
 
         p {
@@ -110,6 +111,7 @@
         form {
             flex-direction: column;
             width: 100%;
+            margin: 20px 0;
             img {
                 left: 10px;
                 top: 37px;
