--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -36,16 +36,17 @@
 
             li {
                 list-style: none;
-                width: 100%;
+                width: auto;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                margin-right: 52px;
                 a {
                     color: inherit;
                     text-decoration: none;
                     width: auto;
                     text-align: center;
-                    font-size: 0.8vw;
+                    font-size: 16px;
                     &:hover {
                         color: var(--primary);
                     }
