--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -90,6 +90,7 @@
             img {
                 height: 200px;
                 width: 300px;
+                margin-right: -50px;
             }
         }
     }
