--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,8 @@
 @import url(../../index.scss);
 
 .intro {
-    background: url("../../assets/introbg.png") no-repeat center;
+    background-color: black;
+    background: url("https://res.cloudinary.com/dumlkkkwe/image/upload/v1692735218/landingPhoto/thgzxsvhjhdbsaqzx16b.png") no-repeat center;
     background-size: cover;
     height: 90vh;
     width: 100%;
