--- a/src/components/howitwork/howitwork.scss
+++ b/src/components/howitwork/howitwork.scss
@@ -36,7 +36,7 @@
         flex: 1;
         display: flex;
         justify-content: center;
-        align-items: end;
+        align-items: flex-end;
 
         .mockup {
             width: 370px;
@@ -57,7 +57,7 @@
         height: 100%;
         display: flex;
         width: 100%;
-        justify-content: start;
+        justify-content: flex-start;
 
         .bar1 {
             height: 610px;
