--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -4,7 +4,7 @@
     height: auto;
     position: relative;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     .infoBox {
         background: linear-gradient(to top, var(--primary) 0%, var(--primary) 80%, var(--white) 80%, var(--white) 100%);
         display: flex;
@@ -12,7 +12,7 @@
         height: 100%;
         min-height: 60px;
         justify-content: space-between;
-        align-items: end;
+        align-items: flex-end;
         .infoContent {
             height: 100%;
             width: auto;
@@ -20,7 +20,7 @@
             margin-left: 100px;
             display: flex;
             flex-direction: column;
-            justify-content: end;
+            justify-content: flex-end;
             h3 {
                 font-size: 36px;
                 color: var(--white);
