--- a/src/components/whyus/why.scss
+++ b/src/components/whyus/why.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
 
     h2 {
         font-size: 3.1vw;
