--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -25,7 +25,7 @@
 
     p {
         color: var(--white);
-        font-size: 1vw;
+        font-size: 16px;
         text-align: center;
         width: 100%;
         max-width: 50vw;
@@ -85,7 +85,9 @@
         }
 
         p {
-            display: none;
+            max-width: none;
+            width: 90%;
+            margin-top: 20px;
         }
 
         form {
